[gd_scene load_steps=3 format=3 uid="uid://cxkj167s7qbpt"]

[ext_resource type="Texture2D" uid="uid://djwt8emt16ogx" path="res://Ressources/Environnement/pas_petit_00.png" id="1_8radl"]
[ext_resource type="Script" path="res://step.gd" id="2_fhyi4"]

[node name="Step" type="Sprite3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0907146, 0)
axis = 1
texture = ExtResource("1_8radl")
script = ExtResource("2_fhyi4")

[node name="TimerBeforeStart" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="TimerBeforeStart" to="." method="_on_timer_before_start_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
